--- a/style.css
+++ b/style.css
@@ -50,6 +50,11 @@ body {
     z-index: 1;
 }
 
+#daniel-quote {
+    position: relative;
+    z-index: 2;
+}
+
 #testimonial-2 {
     background-color: rgb(72, 85, 106);
     color: #ffffff
